added nav element and simplified div tag between header and nav

--- a/Develop/index.html
+++ b/Develop/index.html
@@ -10,19 +10,12 @@
 <body>
     <div class="header">
         <h1>Horiseon</h1>
-        <div>
-            <ul>
-                <li>
-                    <a href="#search-engine-optimization">Search Engine Optimization</a>
-                </li>
-                <li>
-                    <a href="#online-reputation-management">Online Reputation Management</a>
-                </li>
-                <li>
+        
+            <nav>
+                    <a href="#search-engine-optimization">Search Engine Optimization</a> /
+                    <a href="#online-reputation-management">Online Reputation Management</a>/
                     <a href="#social-media-marketing">Social Media Marketing</a>
-                </li>
-            </ul>
-        </div>
+            </nav>
     </div>
     <div class="hero"></div>
     <div class="content">
