centered footer and combined css for footer and header elements

--- a/Develop/index.html
+++ b/Develop/index.html
@@ -10,12 +10,13 @@
 <body>
     <div class="header">
         <h1>Horiseon</h1>
-        
+        <div>
             <nav>
                     <a href="#search-engine-optimization">Search Engine Optimization</a> /
                     <a href="#online-reputation-management">Online Reputation Management</a>/
                     <a href="#social-media-marketing">Social Media Marketing</a>
             </nav>
+        </div>
     </div>
     <div class="hero"></div>
     <div class="content">
