--- a/Develop/index.html
+++ b/Develop/index.html
@@ -9,73 +9,87 @@
 
 <body>
     <header class="header">
-        <h1>Horiseon</h1>
-        <div>
+        <h1>Hori<span class="seo">seo</span>n</h1>
             <nav>
-                    <a href="#search-engine-optimization">Search Engine Optimization</a> /
-                    <a href="#online-reputation-management">Online Reputation Management</a>/
-                    <a href="#social-media-marketing">Social Media Marketing</a>
+                <a href="#search-engine-optimization">Search Engine Optimization</a> /
+                <a href="#online-reputation-management">Online Reputation Management</a>/
+                <a href="#social-media-marketing">Social Media Marketing</a>
             </nav>
-        </div>    
     </header>
+            <div class="hero"></div>
+            <main class="content">
+                <section id="search-engine-optimization" class="search-engine-optimization">
+                    <img src="https://static.bc-edx.com/coding/full-stack/01-HTML-Git-CSS/assets/search-engine-optimization.jpg"
+                        class="float-left"
+                        alt="An open notebook laying on a table turned to a page about SEO laying near a computer by a cup with pencils and pens in it, and a coffe cup" />
+                    <h2>Search Engine Optimization</h2>
+                    <p>
+                        The dominance of mobile internet use means that users are searching for the right business as
+                        they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to
+                        increase your visibility and find the right customers for your business.
+                    </p>
+                </section>
+                <section id="online-reputation-management" class="online-reputation-management">
+                    <img src="https://static.bc-edx.com/coding/full-stack/01-HTML-Git-CSS/assets/online-reputation-management.jpg"
+                        class="float-right" alt="" />
+                    <h2>Online Reputation Management</h2>
+                    <p>
+                        The web is full of opinions, and some of these can be negative. Social media allows anyone with
+                        an internet connection to say whatever they want about your business. Online Reputation
+                        Management gives you the control over what potential customers see when they search for your
+                        business.
+                    </p>
+                </section>
+                <section id="social-media-marketing" class="social-media-marketing">
+                    <img src="https://static.bc-edx.com/coding/full-stack/01-HTML-Git-CSS/assets/social-media-marketing.jpg"
+                        class="float-left" />
+                    <h2>Social Media Marketing</h2>
+                    <p>
+                        Social media continues to have a sizable influence on buying habits. Social media marketing
+                        helps you determine which platforms are suited to your brand, using analytics to find the right
+                        markets and increase your lead generation.
+                    </p>
+                </section>
+            </main>
+    <aside class="benefits">
+        <article>
+            <h3>Lead Generation</h3>
+            <img src="https://static.bc-edx.com/coding/full-stack/01-HTML-Git-CSS/assets/lead-generation.png"
+                alt="A two dimensional image of a gear going into a funnel and coming out as money" />
+            <p>
+                Inbound strategies for lead generation require less work for your business, bringing customers
+                directly
+                to your website.
+            </p>
+        </article>
+        <article>
+            <h3>Brand Awareness</h3>
+            <img src="https://static.bc-edx.com/coding/full-stack/01-HTML-Git-CSS/assets/brand-awareness.png"
+                alt="A two dimensional image of a light bulb above a shirt and tie" />
+            <p>
+                Users find your business through paid and organic searches, increasing the search ranking and
+                visibility
+                for your business.
+            </p>
+        </article>
+        <article>
+            <h3>Cost Management</h3>
+            <img src="https://static.bc-edx.com/coding/full-stack/01-HTML-Git-CSS/assets/cost-management.png"
+                alt="a two dimensional gear with 3 coins in front showing dollar signs" />
+            <p>
+                As the search ranking for your business increases, your advertising costs decrease, and you no
+                longer
+                need to advertise your page.
+            </p>
+        </article>
+    </aside>
 
-<Main>
-<section>
-    <div class="hero"></div>
-    <div class="content">
-        <div class="search-engine-optimization">
-            <img src="https://static.bc-edx.com/coding/full-stack/01-HTML-Git-CSS/assets/search-engine-optimization.jpg" class="float-left" alt="An open notebook laying on a table turned to a page about SEO laying near a computer by a cup with pencils and pens in it, and a coffe cup"/>
-            <h2>Search Engine Optimization</h2>
-            <p>
-                The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
-            </p>
-        </div>
-        <div id="online-reputation-management" class="online-reputation-management">
-            <img src="https://static.bc-edx.com/coding/full-stack/01-HTML-Git-CSS/assets/online-reputation-management.jpg" class="float-right" alt=""/>
-            <h2>Online Reputation Management</h2>
-            <p>
-                The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
-            </p>
-        </div>
-        <div id="social-media-marketing" class="social-media-marketing">
-            <img src="https://static.bc-edx.com/coding/full-stack/01-HTML-Git-CSS/assets/social-media-marketing.jpg" class="float-left" />
-            <h2>Social Media Marketing</h2>
-            <p>
-                Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
-            </p>
-        </div>
-     </div>
-</section>
-</Main>
-
-<section>
- <aside>
-    <div class="benefits"></div>
-        <h3>Lead Generation</h3>
-            <img src="https://static.bc-edx.com/coding/full-stack/01-HTML-Git-CSS/assets/lead-generation.png" alt="A two dimensional image of a gear going into a funnel and coming out as money"/>
-            <p>
-             Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
-             </p>
-        <h3>Brand Awareness</h3>
-            <img src="https://static.bc-edx.com/coding/full-stack/01-HTML-Git-CSS/assets/brand-awareness.png" alt="A two dimensional image of a light bulb above a shirt and tie"/>
-            <p>
-            Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
-            </p>
-        <h3>Cost Management</h3>
-            <img src="https://static.bc-edx.com/coding/full-stack/01-HTML-Git-CSS/assets/cost-management.png" alt= "a two dimensional gear with 3 coins in front showing dollar signs"/>
-            <p>
-            As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
-            </p>
-    </div>   
-   </aside>
-  </section>
-
-    <div class="footer">
-        <h2>Made with ❤️️ by Horiseon</h2>
+    <footer class="footer">
+        <h4>Made with ❤️️ by Horiseon</h4>
         <p>
             &copy; 2024 Horiseon Social Solution Services, Inc.
         </p>
-    </div>
+    </footer>
 </body>
 
 </html>
