--- a/Develop/index.html
+++ b/Develop/index.html
@@ -31,7 +31,7 @@
                 </section>
                 <section id="online-reputation-management" class="online-reputation-management">
                     <img src="https://static.bc-edx.com/coding/full-stack/01-HTML-Git-CSS/assets/online-reputation-management.jpg"
-                        class="float-right" alt="" />
+                        class="float-right" alt="An open computer with a graph indicating reputation as trending upwards. The persons hands and phone are also visible" />
                     <h2>Online Reputation Management</h2>
                     <p>
                         The web is full of opinions, and some of these can be negative. Social media allows anyone with
@@ -42,6 +42,7 @@
                 </section>
                 <section id="social-media-marketing" class="social-media-marketing">
                     <img src="https://static.bc-edx.com/coding/full-stack/01-HTML-Git-CSS/assets/social-media-marketing.jpg"
+                    alt="Viewing a desk from the top with people seated around the table, we see the words share, tweet, like, and media. Only the hands of the people are visible at the table and two are holding tablets on the table and one has an open laptop."
                         class="float-left" />
                     <h2>Social Media Marketing</h2>
                     <p>
